--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "olotintemitope@gmail.com"
         }
     ],
+    "license": "MIT",
     "require": {
         "php": ">=7.4",
         "symfony/dotenv": "^5.3",
@@ -23,6 +24,8 @@
         }
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest"
+        ,
         "phpunit/phpunit": "^9"
     }
 }
