--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         }
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest"
-        ,
+        "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^9"
     }
 }
