--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
             "LazHoliday\\Test\\" : "tests/"
         }
     },
+    "minimum-stability": "dev",
     "require-dev": {
         "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^9"
