--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
     "authors": [
         {
             "name": "Temitope Olotin",
-            "email": "olotintemitope@gmail.com"
+            "email": "olotintemitope@gmail.com",
+            "homepage": "https://olotintemitope.dev"
         }
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
         "symfony/dotenv": "^5.3",
         "ext-json": "*"
     },
