--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     },
     "minimum-stability": "beta",
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^9"
     }
 }
